--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"native-base": "^2.3.2",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-segment-tab": "^0.1.1",
+		"react-native-side-menu": "^1.1.3",
 		"react-native-table-component": "^1.1.1",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.13"
