--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
 		"native-base": "^2.3.2",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-dialogbox": "^0.6.8",
+		"react-native-modal": "^4.1.0",
+		"react-native-popup": "^0.6.1",
+		"react-native-popup-dialog": "^0.9.36",
 		"react-native-segment-tab": "^0.1.1",
 		"react-native-side-menu": "^1.1.3",
 		"react-native-table-component": "^1.1.1",
